# search-jobs

./: .dockerignore  .env_template  .gitignore  Aptfile  Dockerfile  MANIFEST  README.md  README_en.md  add_fake_data_to_databse.py  ads.txt  app.py  cli.py  cmd_docker.txt  crawlers  debug.py  deploy.sh  docker-compose.yml  issues  main.py  make_dev.sh  poc_arsenic.py  publish.sh  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.txt  temp.py  test-requirements.txt  tox.ini  vpm.sqlite
automation/: automation.py
config/: settings.py
crawler/: daitan.py  dqrtech.py  icrawler.py
database/: db.py
docs/: CODE_OF_CONDUCT.md  STEPS.md
driver/: chrome.py
issues/: vagaspramim.herokuapp.com-20211028T091054.html
language/: en_US.json  pt_BR.json
logs/: log.txt
nginx/: Dockerfile  nginx.conf
requirements/: requirements.txt
similarity/: similarity.py
src/: constants.py  media_content.py  orchestrator.py  requirements.txt  settings.py
static/: main.js  robots.txt  style.css
templates/: 404.html  about.html  carousel-card.html  carousel.html  contact.html  disclaimer.html  error.html  footer.html  index.html  index_prod.html  media-list.html  nav.html  nav_about.html  nav_basic.html  search-form.html  search-grid.html  search-result.html  spec.html
tests/: conftest.py  helper.py  settings.py  test_api_compare.py  test_api_overwrite.py  test_api_performance.py  test_api_receiver.py  test_api_update.py  test_cli_commands.py  test_commands.py  test_compare_cv_db.py  test_compare_resume.py  test_crawlers.py  test_dbfactory.py  test_deleteme.py  (+20 more)
(+90 files in other folders)
