[metadata]
name = pkg-compare-cv
version = 0.0.6
author = Douglas Cardoso
author_email = douglas.dcm@gmail.com
description = A package to allow users to find the best position to their curriculum
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/douglasdcm/crawler_of_positions
project_urls =
    Bug Tracker = https://github.com/douglasdcm/crawler_of_positions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src